resizeObserver fix & scroll overflow in `CreatePaletteModal`
+ fix: resizeObserver for gradients now auto-resizes again
+ fix: palette scrolls when overflowing in `CreatePaletteModal`

--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ Canvas
 /* Palette Preview */
 
 .palette-create > section > .palette-preview {
-    
+    overflow: auto;
 }
 
 /* Edit Mode */
